# pet_project

./: LICENSE
backend/: .env.docker  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  poetry.toml  pyproject.toml
backend/src/: constants.py  core.py  main.py
backend/src/api/: crud.py  exceptions.py  fields.py  models.py  shortcuts.py  validators.py  views.py  websocket.py
backend/src/db/: client.py  utils.py
backend/src/pet_project/: settings.py
backend/tests/: test_core.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/: constants.tsx
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/games/[id]/: page.tsx
frontend/src/app/games/[id]/join/: page.tsx
frontend/src/components/: buttons.tsx  input.tsx  theme-button.tsx
frontend/src/utils/: localStorageUtils.tsx
